--- a/website/docs/mail.mdx
+++ b/website/docs/mail.mdx
@@ -2,16 +2,11 @@
 sidebar_position: 3
 ---
 
-# Sign up for news!
+# Subscribe to our Newsletter!
 
-:::info Mailing List
+:::info Newsletter
 
-All are welcome to join our mailing list if you just want to keep up to date with the goings-on of the network and all upcoming activities and projects happening in our community!
+Sign up for our monthly newsletter here: [https://pasifikatechnetwork.substack.com](https://pasifikatechnetwork.substack.com)
 
 :::
 
-
-
-<div style={{ padding: '20px'}}>
-    <iframe src="https://cdn.forms-content.sg-form.com/1e5a5385-51e7-11ed-9c26-5a61d41887ad"/>
-</div> 
